# NueroRisk

./: App.py  LICENSE  README.md  app_startup.py  create_figures.py  create_tables.py  data_processor.py  database.py  genai_insights.py  initialize_models.py  ml_models.py  model_trainer.py  pyproject.toml  requirements.txt  utils.py  visualization.py
DrugConsumptionPredictor/: Drug_Consumption_Prediction_Project_Report.md  app.py  app_startup.py  create_figures.py  create_tables.py  data_processor.py  database.py  genai_insights.py  initialize_models.py  ml_models.py  model_trainer.py  pyproject.toml  utils.py  visualization.py
DrugConsumptionPredictor/attached_assets/: Predicting-Drug-Consumption-using-AI.pptx  Table of Contents.docx
DrugConsumptionPredictor/pages/: 01_Data_Exploration.py  02_Model_Training.py  03_Prediction.py  05_Comparative_Analysis.py  06_Model_Analytics.py  07_User_History.py
DrugConsumptionPredictor/pretrained_models/: RandomForest_Amphet.joblib  metrics_RandomForest_Alcohol.json  metrics_RandomForest_Amphet.json  metrics_RandomForest_Amyl.json  metrics_RandomForest_Benzos.json  metrics_RandomForest_Caff.json  metrics_RandomForest_Cannabis.json  metrics_RandomForest_Choc.json  metrics_RandomForest_Coke.json  metrics_RandomForest_Crack.json  metrics_RandomForest_Ecstasy.json  metrics_RandomForest_Heroin.json  metrics_RandomForest_Ketamine.json  metrics_RandomForest_LSD.json  metrics_RandomForest_Legalh.json  metrics_RandomForest_Meth.json  metrics_RandomForest_Mushrooms.json  metrics_RandomForest_Nicotine.json  metrics_RandomForest_Semer.json  (+2 more)
(+2 files in other folders)
